name:        monad-logger
version:     0.3.30
synopsis:    A class of monads which can log messages.
description: See README and Haddocks at <https://www.stackage.org/package/monad-logger>
category:    System
author:      Michael Snoyman
maintainer:  michael@snoyman.com
license:     MIT
build-type:  Simple
cabal-version: >=1.10

library
    default-extensions: FlexibleContexts
    default-language: Haskell2010
    build-depends:    base >= 4.8.0.0 && <5
                    , transformers
                    , transformers-compat
                    , text
                    , stm
                    , stm-chans
                    , lifted-base
                    , resourcet
                    , conduit
                    , conduit-extra
                    , fast-logger
                    , transformers-base
                    , monad-control
                    , monad-loops
                    , mtl
                    , bytestring
                    , exceptions
                    , unliftio-core
                    , template-haskell
                    , typed-process >= 0.2.2.0 && <0.2.2.1

  exposed-modules: Control.Monad.Logger, Control.Monad.Logger.CallStack
  cpp-options: -DWITH_CALLSTACK
  cpp-options: -DWITH_TEMPLATE_HASKELL
